--- a/deploy/k8s-task-deployment.yaml
+++ b/deploy/k8s-task-deployment.yaml
@@ -3,22 +3,20 @@ kind: Deployment
 metadata:
   name: k8s-task-deplyoment
   labels:
-    app: k8s-task
+    app: k8s-task-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: k8s-task
-  strategy:
-    type: RollingUpdate
+      app: k8s-task-app
   template:
     metadata:
       labels:
-        app: k8s-task
+        app: k8s-task-app
     spec:
       containers:
         - name: k8s-task
-          image: tardis5159/k8s-task:0.0.1
+          image: tardis5159/k8s-task:latest
           ports:
             - containerPort: 8000
           readinessProbe:
