--- a/deploy/k8s-task-ingress.yaml
+++ b/deploy/k8s-task-ingress.yaml
@@ -13,6 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: k8s-task
+                name: k8s-task-service
                 port:
-                  number: 8000
+                  number: 80
