--- a/deploy/k8s-task-ingress.yaml
+++ b/deploy/k8s-task-ingress.yaml
@@ -1,24 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  namespace: default
   name: k8s-task-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - host: arch.homework
     - http:
         paths:
-          - path: /
+          - path: /otusapp(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: k8s-task-service
                 port:
-                  number: 80
-          - path: /otusapp(/|$)(.*)
-            backend:
-              service:
-                name: k8-task-service
-                port:
-                  number: 80
+                  number: 8000
