--- a/deploy/k8s-task-service.yaml
+++ b/deploy/k8s-task-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: default
   name: k8s-task-service
 spec:
   selector:
     app: k8s-task-app
   ports:
-    - port: 80
-      targetPort: 8000
+    - port: 8000
