--- a/deploy/k8s-task-deployment.yaml
+++ b/deploy/k8s-task-deployment.yaml
@@ -19,13 +19,15 @@ spec:
         - name: k8s-task
           image: tardis5159/k8s-task:latest
           ports:
-            - containerPort: 8000
+            - name: app-port
+              containerPort: 8000
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
               port: 8000
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
               port: 8000
+            initialDelaySeconds: 20
